<resources>
    <string name="app_name">IdealHome</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>

    <string name="membername">নাম</string>
    <string name="deposit">জমাকৃত টাকা</string>
    <string name="expense">বাজার খরচ</string>
    <string name="totalmill">মোট মিল</string>
    <string name="rate_of_mill">মিল রেট</string>
    <string name="mill_expense">মিল খরচ</string>

    <string name="mastaken">মেস দিবে</string>
    <string name="masgiven">মেস পাবে</string>


    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>